syntax = "proto3";

package apis;
option go_package = ".;partition_v1";

import "validate.proto";
import "common.proto";

// Service wide response to show success on removal Of entry or failure
message RemoveResponse {
    bool succeeded = 1;
}

//Request to create new tenancy
message TenantRequest {
    string name = 1 [(validate.rules).string = {min_len: 3, max_len: 100}];
    string description = 2 [(validate.rules).string = {min_len: 10, max_len: 500}];
    map<string, string> properties = 3;
}

message TenantObject {
    string tenant_id = 1 [(validate.rules).string = {min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
    string description = 2 [(validate.rules).string = {min_len: 10, max_len: 500}];
    map<string, string> properties = 3;
}

//Request to create a new partition
message PartitionCreateRequest {
    string name = 1 [(validate.rules).string = {min_len: 3, max_len: 100}];
    string tenant_id = 2 [(validate.rules).string = {min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
    string parent_id = 3 [(validate.rules).string = {min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
    string description = 4 [(validate.rules).string = {min_len: 10, max_len: 250}];
    map<string, string> properties = 5;
}

message PartitionGetRequest {
    string partition_id = 1 [(validate.rules).string = {min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
}

message PartitionUpdateRequest {
    string partition_id = 1 [(validate.rules).string = {min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
    string name = 2 [(validate.rules).string = {min_len: 3, max_len: 100}];
    string description = 3 [(validate.rules).string = {min_len: 10, max_len: 500}];
    apis.STATE state = 4;
    map<string, string> properties = 5;
}

message PartitionObject {
    string partition_id = 1 [(validate.rules).string = {min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
    string name = 2 [(validate.rules).string = {min_len: 3, max_len: 100}];
    string tenant_id = 3 [(validate.rules).string = {min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
    string parent_id = 4 [(validate.rules).string = {min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
    string description = 5 [(validate.rules).string = {min_len: 10, max_len: 500}];
    apis.STATE state = 6;
    map<string, string> properties = 7;
}

// Partition Roles
message PartitionRoleCreateRequest {
    string partition_id = 1 [(validate.rules).string = {min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
    string name = 2 [(validate.rules).string = {min_len: 3, max_len: 100}];
    map<string, string> properties = 3;
}

message PartitionRoleObject {
    string partition_role_id = 1 [(validate.rules).string = {min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
    string partition_id = 2 [(validate.rules).string = {min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
    string name = 3 [(validate.rules).string = {min_len: 3, max_len: 100}];
    map<string, string> properties = 4;
}

message PartitionRoleRemoveRequest {
    string partition_role_id = 1 [(validate.rules).string = {min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
}

message PartitionRoleListRequest {
    string partition_id = 1 [(validate.rules).string = {min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
}

message PartitionRoleListResponse {
    repeated PartitionRoleObject role = 1;
}

message PageObject {
    string page_id = 1 [(validate.rules).string = {min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
    string name = 2 [(validate.rules).string = {min_len: 3, max_len: 100}];
    string html = 3 [(validate.rules).string = {min_len: 4, max_len: 5000}];
    apis.STATE state = 4;
}

message PageCreateRequest {
    string partition_id = 1 [(validate.rules).string = {min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
    string name = 2 [(validate.rules).string = {min_len: 3, max_len: 100}];
    string html = 3 [(validate.rules).string = {min_len: 4, max_len: 5000}];
}

message PageGetRequest {
    string page_id = 1 [(validate.rules).string = {ignore_empty: true, min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
    string partition_id = 2 [(validate.rules).string = {ignore_empty: true, min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
    string name = 3 [(validate.rules).string = {ignore_empty: true, min_len: 3, max_len: 100}];
}

message PageRemoveRequest {
    string page_id = 1 [(validate.rules).string = {min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
}

message AccessObject {
    string access_id = 1 [(validate.rules).string = {min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
    string profile_id = 2 [(validate.rules).string = {min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
    PartitionObject partition = 3;
    apis.STATE state = 4;
}

message AccessCreateRequest {
    string partition_id = 1 [(validate.rules).string = {min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
    string profile_id = 2 [(validate.rules).string = {min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
}

message AccessGetRequest {
    string access_id = 1 [(validate.rules).string = {ignore_empty: true, min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
    string partition_id = 2 [(validate.rules).string = {ignore_empty: true, min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
    string profile_id = 3 [(validate.rules).string = {ignore_empty: true, min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
}

message AccessRemoveRequest {
    string access_id = 1 [(validate.rules).string = {min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
}

// Access Roles
message AccessRoleCreateRequest {
    string access_id = 1 [(validate.rules).string = {min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
    string partition_role_id = 2 [(validate.rules).string = {min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
}

message AccessRoleObject {
    string access_role_id = 1 [(validate.rules).string = {min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
    string access_id = 2 [(validate.rules).string = {min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
    PartitionRoleObject role = 3;
}

message AccessRoleRemoveRequest {
    string access_role_id = 1 [(validate.rules).string = {min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
}

message AccessRoleListRequest {
    string access_id = 1 [(validate.rules).string = {min_len: 3, max_len: 40, pattern: "[0-9a-z_-]{3,20}"}];
}

message AccessRoleListResponse {
    repeated AccessRoleObject role = 1;
}

message SearchRequest {
    string query = 1 [(validate.rules).string = {min_len: 3, max_len: 100}];
    uint32 count = 2 [(validate.rules).uint32 = {ignore_empty: true, gte:5, lt: 500}];
    uint32 page = 3 [(validate.rules).uint32 = {ignore_empty: true, gte:1}];
}

service PartitionService {


    // List all tenants in the system matching the query in some way
    rpc ListTenant (SearchRequest) returns (stream TenantObject);

    // Log a new tenant request
    rpc CreateTenant (TenantRequest) returns (TenantObject);

    // List all tenants in the system matching the query in some way
    rpc ListPartition (SearchRequest) returns (stream PartitionObject);

    // Log a new partition request
    rpc CreatePartition (PartitionCreateRequest) returns (PartitionObject);

    // Get an existing partition object
    rpc GetPartition (PartitionGetRequest) returns (PartitionObject);

    // Update an existing partition object
    rpc UpdatePartition (PartitionUpdateRequest) returns (PartitionObject);

    // Create a partition Role for a particular partition
    rpc CreatePartitionRole (PartitionRoleCreateRequest) returns (PartitionRoleObject);

    // List partition roles available for this particular partition
    rpc ListPartitionRoles (PartitionRoleListRequest) returns (PartitionRoleListResponse);

    // Remove a partition role that is not required
    rpc RemovePartitionRole (PartitionRoleRemoveRequest) returns (RemoveResponse);

    // Creates a new page for access or customization of how a partition looks like
    rpc CreatePage (PageCreateRequest) returns (PageObject);

    // Obtains a new page specific to a partition
    rpc GetPage (PageGetRequest) returns (PageObject);

    // Removes a page from being accessible for a partition
    rpc RemovePage (PageRemoveRequest) returns (RemoveResponse);

    // Creates a users ability to access a partition
    rpc CreateAccess (AccessCreateRequest) returns (AccessObject);

    // Obtains a users access to a partition by access id or partition and profile id
    rpc GetAccess (AccessGetRequest) returns (AccessObject);

    // Removes a user's ability to access a partition
    rpc RemoveAccess (AccessRemoveRequest) returns (RemoveResponse);

    // Create an access Role for a particular access
    rpc CreateAccessRole (AccessRoleCreateRequest) returns (AccessRoleObject);

    // List access roles available for this particular access
    rpc ListAccessRoles (AccessRoleListRequest) returns (AccessRoleListResponse);

    // Remove an access role that is not required
    rpc RemoveAccessRole (AccessRoleRemoveRequest) returns (RemoveResponse);

}
